--- a/locales/cs.json
+++ b/locales/cs.json
@@ -442,7 +442,7 @@
     "dropsWinsSlots": {
       "title": "Drops<span class=\"Colored\"> & </span>Wins<br/> Slots",
       "name": "Drops & Wins Slots",
-      "text": "Vítejte v nové 7. fázi pro akce Daily Drops & Wins. Pragmatic Play se rozhodl zdvojnásobit měsíční sumu slotové edice Drops & Wins na 500 000 €! Rovněž zvyšuje počet měsíčních peněžitých cen a nabízí větší šance na výhru. Zúčastněte se vzrušující Drops & Wins a získejte příležitost vyhrát část z neuvěřitelných 4 000 000 € v některé z cen! Proto jsou tentokrát do týdnů 25–28 týdenních turnajů a denních výher zahrnuty některé nové hry!"
+      "text": "\"Vítejte v nové 8. fázi pro akce Daily Drops & Wins. Pragmatic Play se rozhodl zdvojnásobit měsíční sumu slotové edice Drops & Wins na 500 000 €! Rovněž zvyšuje počet měsíčních peněžitých cen a nabízí větší šance na výhru. <br/><br/>Zúčastněte se vzrušující Drops & Wins a získejte příležitost vyhrát část z neuvěřitelných 4 000 000 € v některé z cen! Proto jsou tentokrát do týdnů 29–32 týdenních turnajů (týdny s násobitelem výhry) a denních výher (týdny s násobitelem výhry) některé nové hry!"
     },
     "dropsWinsLive": {
       "title": "Drops<span class=\"Colored\"> & </span>Wins",
@@ -493,26 +493,30 @@
     "previousRound": "Předcházející kolo"
   },
   "dropsWinsSlots": {
-    "title": "Aktualizovaná edice Drops & Wins Slots",
-    "prize": "4 000 000 eur",
-    "text": "Vítejte v nové 7. fázi pro akce Daily Drops & Wins. Pragmatic Play se rozhodl zdvojnásobit měsíční sumu slotové edice Drops & Wins na 500 000 €! Rovněž zvyšuje počet měsíčních peněžitých cen a nabízí větší šance na výhru. Zúčastněte se vzrušující Drops & Wins a získejte příležitost vyhrát část z neuvěřitelných 4 000 000 € v některé z cen! Proto jsou tentokrát do týdnů 25–28 týdenních turnajů a denních výher zahrnuty některé nové hry!",
-    "textMobile": "Vítejte v nové 7. fázi pro akce Daily Drops & Wins. Pragmatic Play se rozhodl zdvojnásobit měsíční sumu slotové edice Drops and Wins na 500 000 eur!",
+    "title": "Drops & Wins Slots",
+    "prize": "4 000 000 €",
+    "text": "Vítejte v nové 8. fázi pro akce Daily Drops & Wins. Pragmatic Play se rozhodl zdvojnásobit měsíční sumu slotové edice Drops & Wins na 500 000 €! Rovněž zvyšuje počet měsíčních peněžitých cen a nabízí větší šance na výhru. Hraní s násobitelem je mnohem zábavnější. Zúčastněte se vzrušující Drops & Wins a získejte příležitost vyhrát část z neuvěřitelných 4 000 000 € v některé z cen! Proto jsou tentokrát do týdnů 29–32 týdenních turnajů (týdny s násobitelem výhry) a denních výher (týdny s násobitelem výhry) některé nové hry!",
+    "textMobile": "Vítejte v nové 8. fázi pro akce Daily Drops & Wins. Pragmatic Play se rozhodl zdvojnásobit měsíční sumu slotové edice Drops & Wins na 500 000 €!",
     "terms": [
       {
-        "title": "Fáze 7 probíhá v termínu:",
-        "text": "● 25. týden: 28. července 2021 09:01 CEST – 4. srpna 2021 18:59 CEST<br/>● 26. týden: 4. srpna 2021 19:01 CEST – 11. srpna 2021 18:59 CEST<br/>● 27. týden: 11. srpna 2021 19:01 CEST – 18. srpna 2021 18:59 CEST<br/>● 28. týden: 18. srpna 2021 19:01 CEST – 25. srpna 2021 18:59 CEST"
+        "title": "Fáze 8 probíhá v termínu:",
+        "text": "● 29. týden: 25. srpna 2021 09:01 CEST – 1. září 2021 18:59 CEST<br/>● 30. týden: 1. září 2021 19:01 CEST – 8. září 2021 18:59 CEST<br/>● 31. týden: 8. září 2021 19:01 CEST – 15. září 2021 18:59 CEST<br/>● 32. týden: 15. září 2021 19:01 CEST – 22. září 2021 18:59 CEST"
       },
       {
-        "title": "Hry zahrnuté",
-        "text": "Wolf Gold™, Mustang Gold™, Sweet Bonanza™, John Hunter and the Tomb of the Scarab Queen™, Great Rhino Megaways™, John Hunter and the Book of Tut™, The Dog House™, The Dog House Megaways™, Chilli Heat™, Fruit Party™, Big Bass Bonanza™, Madame Destiny Megaways™, Gems Bonanza™, Wild Wild Riches™, Wild West Gold™, Gates of Olympus™, Power of Thor Megaways™, Floating Dragon Hold&Spin™, The Hand of Midas™, 5 Lions Megaways™, Buffalo King Megaways™, Release the Kraken™, Empty the Bank™, Lucky Grace And Charm™, Book of Vikings™."
+        "title": "Hry zahrnuté:",
+        "text": "Wolf Gold™, Mustang Gold™, Sweet Bonanza™, John Hunter and the Tomb of the Scarab Queen™, Great Rhino Megaways™, John Hunter and the Book of Tut™, The Dog House ™, The Dog House Megaways™, Chilli Heat ™, Fruit Party™, Big Bass Bonanza™, Madame Destiny Megaways™, Gems Bonanza™, Wild Wild Riches™, Wild West Gold™, Gates of Olympus™, Power of Thor Megaways™, Floating Dragon Hold&Spin™, The Hand of Midas™, 5 Lions Megaways™, Buffalo King Megaways™, Book of Vikings™, Chicken Drop™, Fruit Party 2™, Rise of Giza PowerNudge™, Juicy Fruits™."
       },
       {
         "title": "Drops & Wins zahrnuje",
-        "text": "● Každý turnaj běží od čtvrtka do středy souběžně s denním turnajem Prize Drops.<br/>● Týdenní prize pool 62 000 eur rozdělený na celkem 1 200 peněžitých cen.<br/>● Hráči mají příležitost vyhrát peněžité ceny v denních výhrách s prize poolem ve výši 9 000 eur, který bude rozdělený na 500 peněžitých cen."
+        "text": "● Každý turnaj běží od čtvrtka do středy souběžně s denním turnajem Prize Drops.<br/>● Týdenní prize pool 62 000 € rozdělený na celkem 1 200 peněžitých cen.<br/>● Hráči mají příležitost vyhrát peněžité ceny v denních výhrách s prize poolem ve výši 9 000 €, který bude rozdělený na 500 peněžitých cen."
       },
       {
         "title": "Jak vyhrát",
-        "text": "● Minimální požadovaná sázka činí 0,50 €. <br/>● Aby se hráči mohli zapojit, musí hrát se skutečnými penězi a provést požadovanou sázku v jakékoliv ze zahrnutých her. <br/>● V týdenních turnajích – nejvyšší výhra za jeden spin upravená podle výše sázky.<br/>● V denních turnajích – jakýkoliv spin za skutečné peníze v zapojených hrách může vyvolat náhodnou cenu.<br/>● Hráčům nevznikají žádné další výdaje související s účastí."
+        "text": "● Hráč musí učinit vsázku se skutečnými penězi v jakékoliv ze zúčastněných her a musí získat minimálně jednu (1) výhru ve hře, aby se mohl kvalifikovat do týdenního turnaje. <br/>● Pro účast v turnaji Daily Prize není požadována žádná minimální částka v reálných penězích. Drops (týdny pro násobení výhry)."
+      },
+      {
+        "title": "Dodatečně",
+        "text": "● Hráči, kteří se turnaje zúčastní ve více týdnech, mohou vyhrát ceny v podobě násobku r z vsazené částky vítězného hráče, jak je stanoveno v Tabulce výher týdenního turnaje (týdny pro násobení výhry) – a v Tabulce výher denního turnaje Prize Drop (týdny pro násobení výhry) (dále jako „Týdny pro násobení výhry“). <br/>● Přesáhne-li vítězný spin hodnotu deseti eur/liber (10 €/£), výhra bude vyplacena na základě sázky ve výši deseti eur/liber (10 €/£) nebo odpovídající částky v dostupné měně (viz definice níže) X získaný násobek. <br>● Pořadí ve výsledkové tabulce odpovídá skóre, které je dané nejvyšší vyhranou částkou v jednom spinu a libovolné zahrnuté hře, upravenou podle výše vkladu.<br>● Pokud by týdenní turnaj dokončili dva (2) nebo více hráčů se stejným umístěním ve výsledkové tabulce, pak hráč, který skóre dosáhne první, dostane nejvyšší výhru."
       }
     ]
   },
