--- a/locales/fr_ca.json
+++ b/locales/fr_ca.json
@@ -447,7 +447,7 @@
     "dropsWinsSlots": {
       "title": "Drops<span class=\"Colored\"> & </span>Wins",
       "name": "Drops & Wins Slots",
-      "text": "Bienvenue à la nouvelle étape 7 de la promotion Drops & Wins quotidienne. Pragmatic Play a décidé de doubler le budget de l’édition mensuelle de Drops & Wins Slots à 500 000 €! Ils augmentent également le nombre de prix mensuels en argent et vous donnent encore plus de chances de gagner. Participez au passionnant Drops & Wins et courez la chance de gagner une part des 4 000 000 € de prix! C’est pourquoi, cette fois, les semaines 25–28 sont consacrées à des tournois hebdomadaires et à des remises de prix quotidiens avec de nouveaux jeux!"
+      "text": "Bienvenue à la nouvelle étape 8 de la promotion Drops & Wins quotidienne. Pragmatic Play a décidé de doubler le budget de l’édition mensuelle de Drops & Wins Slots à 500 000 €! <br/><br/>Ils augmentent également le nombre de prix mensuels en argent et vous donnent encore plus de chances de gagner. Participez au passionnant Drops & Wins et courez la chance de gagner une part des 4 000 000 € de prix! C’est pourquoi, cette fois, C’est pourquoi, cette fois, les semaines 29–32 des tournois hebdomadaires (semaines à prix multiplicateur) et des remises de prix quotidiennes (semaines à prix multiplicateur) avec de nouveaux jeux!"
     },
     "dropsWinsLive": {
       "title": "Drops<span class=\"Colored\"> & </span>Wins<br/> Live",
@@ -498,18 +498,18 @@
     "previousRound": "Tour précédent"
   },
   "dropsWinsSlots": {
-    "title": "Édition mise à jour de Drops & Wins Slots",
+    "title": "Drops & Wins Slots",
     "prize": "4 000 000 €",
-    "text": "Bienvenue à la nouvelle étape 7 de la promotion Drops & Wins quotidienne. Pragmatic Play a décidé de doubler le budget de l’édition mensuelle de Drops & Wins Slots à 500 000 €! Ils augmentent également le nombre de prix mensuels en argent et vous donnent encore plus de chances de gagner. Participez au passionnant Drops & Wins et courez la chance de gagner une part des 4 000 000 € de prix! C’est pourquoi, cette fois, les semaines 25–28 sont consacrées à des tournois hebdomadaires et à des remises de prix quotidiens avec de nouveaux jeux!",
-    "textMobile": "Bienvenue à la nouvelle étape 7 de la promotion Drops & Wins quotidienne. Pragmatic Play a décidé de doubler le budget de l’édition mensuelle de Drops & Wins Slots à 500 000 €!",
+    "text": "Bienvenue à la nouvelle étape 8 de la promotion Drops & Wins quotidienne. Pragmatic Play a décidé de doubler le budget de l’édition mensuelle de Drops & Wins Slots à 500 000 €! Ils augmentent également le nombre de prix mensuels en argent et vous donnent encore plus de chances de gagner. Jouer avec un multiplicateur est plus amusant. Participez au passionnant Drops & Wins et courez la chance de gagner une part des 4 000 000 € de prix! C’est pourquoi, cette fois, les semaines 13–16 des tournois hebdomadaires (semaines à prix multiplicateur) et des remises de prix quotidiennes (semaines à prix multiplicateur) avec de nouveaux jeux!",
+    "textMobile": "Bienvenue à la nouvelle étape 8 de la promotion Drops & Wins quotidienne. Pragmatic Play a décidé de doubler le budget de l’édition mensuelle de Drops & Wins Slots à 500 000 €!",
     "terms": [
       {
-        "title": "L’étape 7 se déroule ainsi",
-        "text": "● Semaine 25: 28 juli 2021 09:01 CEST – 4 août 2021 18:59 CEST<br/>● Semaine 26: 4 août 2021 19:01 CEST – 11 août 2021 18:59 CEST<br/>● Semaine 27: 11 août 2021 19:01 CEST – 18 août 2021 18:59 CEST<br/>● Semaine 28: 18 août 2021 19:01 CEST – 25 août 2021 18:59 CEST"
+        "title": "L’étape 8 se déroule ainsi",
+        "text": "● Semaine 29: 25 août 2021 09:01 CEST – 1 septembre 2021 18:59 CEST<br/>● Semaine 30: 1 septembre 2021 19:01 CEST – 8 septembre 2021 18:59 CEST<br/>● Semaine 31: 8 septembre 2021 19:01 CEST – 15 septembre 2021 18:59 CEST<br/>● Semaine 32: 15 septembre 2021 19:01 CEST – 22 septembre 2021 18:59 CEST"
       },
       {
         "title": "Jeux participants:",
-        "text": "Wolf Gold™, Mustang Gold™, Sweet Bonanza™, John Hunter and the Tomb of the Scarab Queen™, Great Rhino Megaways™, John Hunter and the Book of Tut™, The Dog House™, The Dog House Megaways™, Chilli Heat™, Fruit Party™, Big Bass Bonanza™, Madame Destiny Megaways™, Gems Bonanza™, Wild Wild Riches™, Wild West Gold™, Gates of Olympus™, Power of Thor Megaways™, Floating Dragon Hold&Spin™, The Hand of Midas™, 5 Lions Megaways™, Buffalo King Megaways™, Release the Kraken™, Empty the Bank™, Lucky Grace And Charm™, Book of Vikings™."
+        "text": "Wolf Gold™, Mustang Gold™, Sweet Bonanza™, John Hunter and the Tomb of the Scarab Queen™, Great Rhino Megaways™, John Hunter and the Book of Tut™, The Dog House ™, The Dog House Megaways™, Chilli Heat ™, Fruit Party™, Big Bass Bonanza™, Madame Destiny Megaways™, Gems Bonanza™, Wild Wild Riches™, Wild West Gold™, Gates of Olympus™, Power of Thor Megaways™, Floating Dragon Hold&Spin™, The Hand of Midas™, 5 Lions Megaways™, Buffalo King Megaways™, Book of Vikings™, Chicken Drop™, Fruit Party 2™, Rise of Giza PowerNudge™, Juicy Fruits™."
       },
       {
         "title": "Drops & Wins comprend",
@@ -517,7 +517,11 @@
       },
       {
         "title": "Comment gagner",
-        "text": "● Mise minimale requise de 0,50 €. <br/>● Pour participer, les joueurs doivent jouer avec de l’argent réel et faire des paris qualifiants dans l’un des jeux participants. <br/>● Dans les tournois hebdomadaires, le plus haut montant de gain d’un seul tour ajusté au montant de la mise.<br/>● Dans les tournois quotidiens, tout tour en argent réel dans les jeux participants peut entraîner un prix aléatoire.<br/>● La participation des joueurs n’entraîne aucun coût supplémentaire"
+        "text": "● Un joueur doit placer une mise en argent réel sur n’importe quel jeu participant et doit obtenir au moins une (1) victoire intrajeu pour se qualifier pour le Tournoi hebdomadaire. <br/>● Aucune mise minimale en argent réel n’est requise pour que les joueurs soient admissibles à participer aux prix quotidiens (semaines du multiplicateur de prix). "
+      },
+      {
+        "title": "De plus:",
+        "text": "● Les joueurs participant aux semaines avec multiplicateur peuvent gagner des prix sous la forme d’un multiplicateur du montant de la mise du joueur gagnant, comme indiqué dans le tableau des prix du tournoi hebdomadaire (semaines avec multiplicateur de prix) et dans le tableau des prix quotidiens (semaines avec multiplicateur de prix) ci-dessous (ci-après les « semaines avec multiplicateur de prix »). <br/>● Si le tour gagnant est supérieur à dix euros (€10), le prix sera payé sur la base d’une mise de dix euros (€10) ou du montant équivalent dans la devise disponible (telle que définie ci-après) X le multiplicateur reçu.<br/>● Le classement est établi en fonction du pointage, lequel est basé sur le montant du gain le plus élevé en un seul tour pour tout jeu participant, ajusté au montant de la mise.<br/>● Dans le cas où deux (2) joueurs ou plus terminent un tournoi hebdomadaire à la même position au classement, le joueur qui a atteint le pointage en premier recevra le prix le plus élevé."
       }
     ]
   },
