--- a/locales/fr_ca.json
+++ b/locales/fr_ca.json
@@ -1,5 +1,11 @@
 {
   "title": "PlayJoker",
+  "cookiePolicy": {
+    "text": "We use cookies to improve your experience. By using our website you are accepting our",
+    "linkName": "Cookie Policy",
+    "textMobile": "We use",
+    "linkNameMobile": "cookies"
+  },
   "buttons": {
     "signUp": "S'enregistrer",
     "register": "Enregistrer",
